fixing export